finish with part 5 of project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Rock Paper Scissors</title>
+        <script src="script/script.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <label for="choices">Choose Rock, Paper or Scissors:</label><br>
+            <input type="text" name="choices"><br>
+            <button class="btnChoices">choose</button>
+        </div>
 
+        <script></script>
+    </body>
+</html>
