finised rock-paper-scissors

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     </head>
     <body>
         <div class="container">
-            <label for="choices">Choose Rock, Paper or Scissors:</label><br>
-            <input type="text" name="choices"><br>
-            <button class="btnChoices">choose</button>
+            <div>Rock Paper Scissors</div>
         </div>
 
         <script></script>
