finished rps-ui

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
-        <script src="script/script.js"></script>
+        <script src="script/script.js" defer></script>
     </head>
     <body>
         <div class="container">
             <div>Rock Paper Scissors</div>
         </div>
-
-        <script></script>
+        <div class="selection-container">
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissors">Scissors</button>
+        </div>
+        <button class="reset-game">Reset Game</button>
+        <div class="rounds-played">Rounds played:</div>
     </body>
 </html>
